[metadata]
name = driver-center
author = Felix Yan
author-email = felixonmars@archlinux.org
summary = Collect anonymous hardware info and give correct drivers to you
license = GPL-3
home-page = https://github.com/felixonmars/driver-center
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages = driver_center

[entry_points]
console_scripts =
    driver-center = driver_center.main:main
driver_center.data_sources =
    alsa = driver_center.plugins.alsa:AlsaDataSource
    boot = driver_center.plugins.boot:BootDataSource
